--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/ViolaSorgato/REST-API#readme",
   "dependencies": {
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "nodemon": "^2.0.20"
+    "fs": "^0.0.1-security"
   }
 }
